@@ -28,7 +28,8 @@
 
 void Ut_DcpSingleComponent::init()
 {
-    m_subject = new DcpSingleComponent(0, "Logical ID", "title1", "title2");
+    m_subject = new DcpSingleComponent(0, "Logical ID", "title1", "icon",
+                                       "title2");
     m_subject->setSubPage(PageHandle(PageHandle::LOOKANDFEEL, "Look & Feel"));
 }
 
